--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-cayman
 github:
   is_project_page: false
+title: My Work
+cover-img: https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F157626055691172598%2F&psig=AOvVaw0WUAflTsmZYjwbL8wWJILB&ust=1638542232075000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNjEq8-rxfQCFQAAAAAdAAAAABAJ
